fixed notstack z-index

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   padding: 0 15px;
   border-bottom: 1px solid lightgray;
-  position: sticky;
+  position: relative;
   padding-right: 30px;
   z-index: 9999;
   background-color: white;
